# xiaoye-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  gunicorn.conf.py  main.py  pyproject.toml  requirements.txt  settings.py
agents/: ai_chat.py  analysisAgent.py  tools.py
apps/: agents.py  ai.py  user.py
celery_task/: celery.py  task.py
dependencies/: UserDepends.py
docs/: deploy.md
media/uploadFile/: 清洗.xlsx  网店运营数据.xlsx
models/: UserModel.py
schemas/: AgentSchema.py  UserSchema.py
utils/: auth.py  redis.py  send_email.py
